Fix header-logos z-index

--- a/ckanext/ckanext-sixodp_ui/ckanext/sixodp_ui/fanstatic/sixodp_ui.css
+++ b/ckanext/ckanext-sixodp_ui/ckanext/sixodp_ui/fanstatic/sixodp_ui.css
@@ -6149,7 +6149,7 @@ a {
   .navbar.navbar-fixed {
     top: 0; }
   .header-logos {
-    z-index: 1001;
+    z-index: 1004;
     display: inline-block;
     position: absolute;
     top: 0;
