--- a/ckanext/ckanext-sixodp_ui/src/scss/components/nav.scss
+++ b/ckanext/ckanext-sixodp_ui/src/scss/components/nav.scss
@@ -260,7 +260,7 @@
   }
 
   .header-logos {
-    z-index: 1001;
+    z-index: 1004;
     display: inline-block;
     position: absolute;
     top: 0;
